--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "slotCount",
-  "version": "1.0.0",
-  "description": "Simple slot machine-like counter, inspired by Google Plus.",
-  "author": "Kenneth Auchenberg <kenneth@auchenberg.dk>",
-  "license": "MIT",
-  "dependencies": {
-    "mocha": "~1.13.0"
-  }
+  "name": "auchenberg-slotcount.js",
+  "description": "",
+  "version": "0.0.1",
+  "keywords": [],
+  "main": "slotCount.js",
+  "styles": [
+    "slotCount.css"
+  ],
+  "dependencies": {},
+  "license": "MIT"
 }
